0.0.2 (?)
=========
* Add the ability to manually link nicknames.

0.0.1 (2012-12-21)
==================
* Initial release. Supports converting logs to chatstats format and generating
  very basic HTML statistics about a set of logs.