@@ -1,6 +1,7 @@
 0.0.2 (?)
 =========
 * Add the ability to manually link nicknames.
+* Support giving users a non-nickname alias.
 
 0.0.1 (2012-12-21)
 ==================
